# gptui

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: config.toml  init.sql
schema/: schema.sql
src/: _app.rs  _tui.rs  app.rs  cli.rs  client.rs  clip.rs  config.rs  db.rs  editor.rs  error.rs  lib.rs  llm.rs  main.rs  message.rs  relay.rs  session.rs  tui.rs
