[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "3.1.0"
anyhow = "1.0.75"
arboard = "3.3.0"
async-stream = "0.3.5"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
crossbeam-channel = { version = "0.5.8", features = ["crossbeam-utils"] }
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
derive_builder = "0.12.0"
directories = "5.0.1"
edit = "0.1.4"
futures = "0.3.29"
futures-util = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
ratatui = { version = "0.24.0", features = ["macros", "all-widgets"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
signal-hook = "0.3.17"
syntect = "5.1.0"
tempfile = "3.8.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tui-textarea = "0.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
