[package]
name = "gptui"
authors = ["keagud"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
description = "A TUI interface for OpenAI Chat Completions"
license = "GPL-3.0-or-later"
repository = "https://github.com/keagud/gptui"
keywords = ["openai", "gpt", "llm", "chatbot"]
categories = ["command-line-utilities"]

[features]
# compile API key into the binary itself
comptime-key = []
debug-dump = []

[dependencies]
ansi-to-tui = "3.1.0"
anyhow = "1.0.75"
arboard = "3.3.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
crossbeam-channel = { version = "0.5.8", features = ["crossbeam-utils"] }
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
ctrlc = { version = "3.4.2", features = ["termination"] }
daemonize = "0.5.0"
directories = "5.0.1"
edit = "0.1.4"
filenamify = "0.1.0"
futures = "0.3.29"
futures-util = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
ratatui = { version = "0.25.0", features = ["macros", "all-widgets"] }
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.3"
syntect = "5.1.0"
textwrap = "0.16.0"
thiserror = "1.0.56"
tokio = "1.34.0"
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["v4"] }
which = "5.0.0"
